--- a/.github/workflows/main_stock-sz1.yml
+++ b/.github/workflows/main_stock-sz1.yml
@@ -10,7 +10,8 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'start/server' # set this to the path to your web app project, defaults to the repository root
+  PACKAGE_PATH: 'start/server'
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
   NODE_VERSION: '20.x' # set this to the node version to use (supports 8.x, 10.x, 12.x)
 
 jobs:
